# Vacancy_formation_in_HfO2

First_Reaction_Method/: main.ipynb
First_Reaction_Method/Алгоритм Монте-Карло/: Что стоит посмотреть.docx
First_Reaction_Method/Обработка результатов/: Что стоит посмотреть.docx
First_Reaction_Method/Примеры моделей/: Что стоит посмотреть.docx
First_Reaction_Method/Расчет распределения электричексого потенциала и температуры/: Старая модель_2020.docx  Что стоит посмотреть.docx
First_Reaction_Method/Формирование дефектов и  модели пробоя/: Что стоит посмотреть.docx
First_Reaction_Method/Электрический ток/: Что стоит посмотреть.docx
HfO2VacancyMC/: CMakeLists.txt  main.cc  main.ipynb
HfO2VacancyMC/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  VacancyModel.hh  VoxelGrid.hh
HfO2VacancyMC/macros/: run.mac  vis.mac
HfO2VacancyMC/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  VacancyModel.cc
Monte_Carlo_PMMA/: sim_exposure.py
